--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,61 @@
+amqp==5.3.1
+asgiref==3.8.1
+billiard==4.2.1
+CacheControl==0.14.3
+cachetools==5.5.2
+celery==5.3.4
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==5.2
+django-cors-headers==4.3.0
+django-extensions==3.2.3
+django-filter==23.3
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.3.0
-django-cors-headers==4.3.0
-python-dotenv==1.0.0
-celery==5.3.4
-redis==5.0.1
-Pillow==10.1.0
-psycopg2-binary==2.9.9
-requests==2.31.0
-django-filter==23.3
 drf-yasg==1.21.7
 fcm-django==1.0.12
-django-extensions==3.2.3
+firebase-admin==5.4.0
+google-api-core==2.25.0
+google-api-python-client==2.171.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.72.1
+grpcio-status==1.72.1
+httplib2==0.22.0
+idna==3.10
+inflection==0.5.1
+kombu==5.5.4
+msgpack==1.1.0
+packaging==25.0
+prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==6.31.1
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2025.2
+PyYAML==6.0.2
+redis==5.0.1
+requests==2.31.0
+rsa==4.9.1
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
