--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ django-cors-headers==4.3.0
 django-extensions==3.2.3
 django-filter==23.3
 djangorestframework==3.16.0
-djangorestframework-simplejwt==5.3.0
-drf-yasg==1.21.7
+djangorestframework-simplejwt==5.5.0
+drf-yasg==1.21.10
 fcm-django==1.0.12
 firebase-admin==5.4.0
 google-api-core==2.25.0
@@ -43,7 +43,7 @@ protobuf==6.31.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-PyJWT==2.10.1
+PyJWT==2.9.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
@@ -59,3 +59,4 @@ uritemplate==4.2.0
 urllib3==2.4.0
 vine==5.1.0
 wcwidth==0.2.13
+openpyxl==3.1.2
